--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DashliteReact-Demo3",
-  "homepage": "https://react.dashlite.net/demo3/",
+  "homepage": ".",
   "version": "1.4.0",
   "private": true,
   "dependencies": {
